Task block checkbox alignment fix
Due to the different size of grid sections, the completion checkbox on task blocks was misaligned. Fixed by reassigning it to a grid area covering all rows and aligning it to the center. Also slightly increased its size to match the buttons.

--- a/src/styles.css
+++ b/src/styles.css
@@ -152,13 +152,14 @@ body {
         grid-column: 3/4;
     }
     > .check-complete {
-        grid-row: 2/3;
+        grid-row: 1/4;
         grid-column: 5/6;
         justify-self: left;
+        align-self: center;
         appearance: none;
         border: 2px solid black;
-        height: 1.5rem;
-        width: 1.5rem;
+        height: 2rem;
+        width: 2rem;
         background-color: white;
         &:checked {
             background-color: lightblue;
